# tiago_tactile_ta11

./: CMakeLists.txt  README.md  package.xml
config/: ta11-mounted.yaml  ta11.yaml
include/tiago_tactile_ta11/: ta11.h
launch/: delay.launch  load_controller.launch  measure.launch  pub.launch  publish.launch  ta11.launch  tiago.launch
msg/: TA11.msg
scripts/: analyse_times.py  calc_m.py  estimate_k.py  grav_comp.py  load_cell_publisher.py  measure.py  measure_delay.py  test.py  value_dist.py
src/: Makefile  load_cell_publisher.py  measure.py  ta11.cpp  u6.cpp
src/nodes/: ta11_pub.cpp
