<?xml version="1.0"?>
<package format="2">
  <name>tiago_tactile_ta11</name>
  <version>0.0.1</version>
  <description>TA11 sensor tools for TIAGo</description>

  <maintainer email="lucalach@pal-robotics.com">llach</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tiago_tactile_msgs</depend>

</package>
